--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ Common
 
 ul {
     list-style: none;
+    padding: 0;
 }
 
 li {
@@ -39,7 +40,7 @@ Main
 */
 
 #app {
-    width: 18.75rem;
+    width: 50rem;
     margin: 0 auto;
     background-color: pink;
 }
