bonus 2 doesn't work

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,16 @@ Common
 --------
 */
 
+.title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title > img {
+    margin-right: .625rem;
+}
+
 ul {
     list-style: none;
     padding: 0;
@@ -26,7 +36,9 @@ li {
     justify-content: space-between;
     align-items: center;
     padding: .625rem .3125rem .625rem .3125rem;
-    border: .0625rem solid black;
+    outline: .0625rem solid black;
+    border-radius: .625rem;
+    margin-bottom: .0625rem;
 }
 
 .doneToDo {
@@ -42,5 +54,4 @@ Main
 #app {
     width: 50rem;
     margin: 0 auto;
-    background-color: pink;
 }
